[gd_scene load_steps=9 format=2]

[ext_resource path="res://Src/Spawner/PlayerSpawn.gd" type="Script" id=1]
[ext_resource path="res://Assets/Spawner/DummySpawner.png" type="Texture" id=2]
[ext_resource path="res://Assets/Spawner/DummyBeam.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/checkpoint.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/teleport.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Beam:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "beam"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Beam:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.35, 0.45, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show_player"
} ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 30 )

[node name="PlayerSpawn" type="Position2D"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -15, 32, 15, 32, 10, 29, -10, 29 )

[node name="Spawner" type="Sprite" parent="."]
z_index = 49
texture = ExtResource( 2 )
hframes = 2

[node name="Beam" type="Sprite" parent="."]
z_index = 51
texture = ExtResource( 3 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/beam = SubResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -29.0
margin_top = -63.0
margin_right = 29.0
margin_bottom = -34.0
text = "CHECKPOINT
ACVTIVATED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="CheckPointSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="TeleportSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Sound"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
